--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-modal": "^13.0.0",
+    "react-native-sound": "^0.11.2",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
