--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
   },
   "dependencies": {
     "expo": "~44.0.0",
+    "expo-av": "^10.2.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react-native": "^0.64.3",
+    "react-native-background-timer": "^2.4.1",
     "react-native-modal": "^13.0.0",
-    "react-native-sound": "^0.11.2",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
-  "private": true
+  "private": true,
+  "http.proxySupport": "off"
 }
